@@ -21,19 +21,13 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.stream.*;
 
-import org.apache.commons.collections4.IteratorUtils;
-
-import com.google.common.collect.*;
-
 import db.DBRecord;
 import db.StringField;
-import ghidra.dbg.target.TargetBreakpointLocation;
 import ghidra.dbg.target.TargetObject;
 import ghidra.dbg.target.schema.TargetObjectSchema;
 import ghidra.dbg.util.*;
-import ghidra.program.model.address.*;
+import ghidra.program.model.address.AddressSpace;
 import ghidra.trace.database.DBTrace;
-import ghidra.trace.database.DBTraceUtils;
 import ghidra.trace.database.breakpoint.DBTraceObjectBreakpointLocation;
 import ghidra.trace.database.breakpoint.DBTraceObjectBreakpointSpec;
 import ghidra.trace.database.map.DBTraceAddressSnapRangePropertyMapSpace;
@@ -45,8 +39,11 @@ import ghidra.trace.database.stack.DBTraceObjectStack;
 import ghidra.trace.database.stack.DBTraceObjectStackFrame;
 import ghidra.trace.database.target.DBTraceObjectValue.PrimaryTriple;
 import ghidra.trace.database.target.InternalTraceObjectValue.ValueLifespanSetter;
-import ghidra.trace.database.target.InternalTreeTraversal.Visitor;
+import ghidra.trace.database.target.visitors.*;
+import ghidra.trace.database.target.visitors.TreeTraversal.Visitor;
 import ghidra.trace.database.thread.DBTraceObjectThread;
+import ghidra.trace.model.Lifespan;
+import ghidra.trace.model.Lifespan.*;
 import ghidra.trace.model.Trace.TraceObjectChangeType;
 import ghidra.trace.model.breakpoint.TraceObjectBreakpointLocation;
 import ghidra.trace.model.breakpoint.TraceObjectBreakpointSpec;
@@ -59,8 +56,7 @@ import ghidra.trace.model.target.*;
 import ghidra.trace.model.target.annot.TraceObjectInterfaceUtils;
 import ghidra.trace.model.thread.TraceObjectThread;
 import ghidra.trace.util.TraceChangeRecord;
-import ghidra.util.LockHold;
-import ghidra.util.Msg;
+import ghidra.util.*;
 import ghidra.util.database.*;
 import ghidra.util.database.DBCachedObjectStoreFactory.AbstractDBFieldCodec;
 import ghidra.util.database.annot.*;
@@ -202,12 +198,13 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public RangeSet<Long> getLife() {
+	public LifeSet getLife() {
+		// TODO: This should really be cached
 		try (LockHold hold = manager.trace.lockRead()) {
-			RangeSet<Long> result = TreeRangeSet.create();
+			MutableLifeSet result = new DefaultLifeSet();
 			// NOTE: connected ranges should already be coalesced
 			// No need to apply discreet domain
-			getCanonicalParents(Range.all()).forEach(v -> result.add(v.getLifespan()));
+			getCanonicalParents(Lifespan.ALL).forEach(v -> result.add(v.getLifespan()));
 			return result;
 		}
 	}
@@ -220,23 +217,24 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		return manager.doGetObject(path.parent());
 	}
 
-	protected void doInsert(Range<Long> lifespan, ConflictResolution resolution) {
+	protected DBTraceObjectValPath doInsert(Lifespan lifespan, ConflictResolution resolution) {
 		if (path.isRoot()) {
-			return;
+			return DBTraceObjectValPath.of();
 		}
 		DBTraceObject parent = doCreateCanonicalParentObject();
-		parent.setValue(lifespan, path.key(), this, resolution);
-		parent.doInsert(lifespan, resolution);
+		InternalTraceObjectValue value = parent.setValue(lifespan, path.key(), this, resolution);
+		DBTraceObjectValPath path = parent.doInsert(lifespan, resolution);
+		return path.append(value);
 	}
 
 	@Override
-	public void insert(Range<Long> lifespan, ConflictResolution resolution) {
+	public DBTraceObjectValPath insert(Lifespan lifespan, ConflictResolution resolution) {
 		try (LockHold hold = manager.trace.lockWrite()) {
-			doInsert(lifespan, resolution);
+			return doInsert(lifespan, resolution);
 		}
 	}
 
-	protected void doRemove(Range<Long> span) {
+	protected void doRemove(Lifespan span) {
 		if (isRoot()) {
 			throw new IllegalArgumentException("Cannot remove the root object");
 		}
@@ -246,13 +244,16 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public void remove(Range<Long> span) {
+	public void remove(Lifespan span) {
 		try (LockHold hold = manager.trace.lockWrite()) {
 			doRemove(span);
 		}
 	}
 
-	protected void doRemoveTree(Range<Long> span) {
+	protected void doRemoveTree(Lifespan span) {
+		for (DBTraceObjectValue parent : getParents()) {
+			parent.doTruncateOrDeleteAndEmitLifeChange(span);
+		}
 		for (InternalTraceObjectValue value : getValues()) {
 			value.doTruncateOrDeleteAndEmitLifeChange(span);
 			if (value.isCanonical()) {
@@ -262,9 +263,8 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public void removeTree(Range<Long> span) {
+	public void removeTree(Lifespan span) {
 		try (LockHold hold = manager.trace.lockWrite()) {
-			getCanonicalParents(span).forEach(v -> v.doTruncateOrDeleteAndEmitLifeChange(span));
 			doRemoveTree(span);
 		}
 	}
@@ -275,12 +275,12 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 			if (isRoot()) {
 				return manager.valueStore.getObjectAt(0);
 			}
-			return getCanonicalParents(Range.singleton(snap)).findAny().orElse(null);
+			return getCanonicalParents(Lifespan.at(snap)).findAny().orElse(null);
 		}
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValue> getCanonicalParents(Range<Long> lifespan) {
+	public Stream<? extends DBTraceObjectValue> getCanonicalParents(Lifespan lifespan) {
 		// TODO: If this is invoked often, perhaps index
 		try (LockHold hold = manager.trace.lockRead()) {
 			if (isRoot()) {
@@ -291,7 +291,7 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 			return manager.valuesByChild.getLazily(this)
 					.stream()
 					.filter(v -> canonicalKey.equals(v.getEntryKey()))
-					.filter(v -> DBTraceUtils.intersect(v.getLifespan(), lifespan))
+					.filter(v -> v.getLifespan().intersects(lifespan))
 					.filter(v -> canonicalTail.equals(v.getParent().getCanonicalPath()));
 		}
 	}
@@ -304,12 +304,12 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValPath> getAllPaths(Range<Long> span) {
+	public Stream<? extends TraceObjectValPath> getAllPaths(Lifespan span) {
 		try (LockHold hold = manager.trace.lockRead()) {
 			if (isRoot()) {
 				return Stream.of(DBTraceObjectValPath.of());
 			}
-			return doStreamVisitor(span, InternalAllPathsVisitor.INSTANCE);
+			return doStreamVisitor(span, AllPathsVisitor.INSTANCE);
 		}
 	}
 
@@ -327,10 +327,14 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		return ifCls.cast(ifaces.get(ifCls));
 	}
 
+	protected Collection<? extends DBTraceObjectValue> doGetParents() {
+		return manager.valuesByChild.get(this);
+	}
+
 	@Override
 	public Collection<? extends DBTraceObjectValue> getParents() {
 		try (LockHold hold = manager.trace.lockRead()) {
-			return manager.valuesByChild.get(this);
+			return doGetParents();
 		}
 	}
 
@@ -341,6 +345,32 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 			if (val.getParent() != this) {
 				break;
 			}
+			result.add(val);
+		}
+	}
+
+	protected void collectNonRangedAttributes(List<? super DBTraceObjectValue> result) {
+		for (DBTraceObjectValue val : manager.valuesByTriple
+				.sub(new PrimaryTriple(this, "", Long.MIN_VALUE), true,
+					new PrimaryTriple(this, "[", Long.MIN_VALUE), false)
+				.values()) {
+			result.add(val);
+		}
+		for (DBTraceObjectValue val : manager.valuesByTriple
+				.tail(new PrimaryTriple(this, "\\", Long.MIN_VALUE), true)
+				.values()) {
+			if (val.getParent() != this) {
+				break;
+			}
+			result.add(val);
+		}
+	}
+
+	protected void collectNonRangedElements(List<? super DBTraceObjectValue> result) {
+		for (DBTraceObjectValue val : manager.valuesByTriple
+				.sub(new PrimaryTriple(this, "[", Long.MIN_VALUE), true,
+					new PrimaryTriple(this, "\\", Long.MIN_VALUE), false)
+				.values()) {
 			result.add(val);
 		}
 	}
@@ -362,6 +392,38 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		: manager.rangeValueMap.getActiveMemorySpaces()) {
 			for (DBTraceObjectAddressRangeValue val : space.values()) {
 				if (val.getParent() != this) {
+					continue;
+				}
+				result.add(val);
+			}
+		}
+	}
+
+	protected void collectRangedAttributes(
+			Collection<? super DBTraceObjectAddressRangeValue> result) {
+		for (DBTraceAddressSnapRangePropertyMapSpace<DBTraceObjectAddressRangeValue, ?> space //
+		: manager.rangeValueMap.getActiveMemorySpaces()) {
+			for (DBTraceObjectAddressRangeValue val : space.values()) {
+				if (val.getParent() != this) {
+					continue;
+				}
+				if (!PathUtils.isName(val.getEntryKey())) {
+					continue;
+				}
+				result.add(val);
+			}
+		}
+	}
+
+	protected void collectRangedElements(
+			Collection<? super DBTraceObjectAddressRangeValue> result) {
+		for (DBTraceAddressSnapRangePropertyMapSpace<DBTraceObjectAddressRangeValue, ?> space //
+		: manager.rangeValueMap.getActiveMemorySpaces()) {
+			for (DBTraceObjectAddressRangeValue val : space.values()) {
+				if (val.getParent() != this) {
+					continue;
+				}
+				if (!PathUtils.isIndex(val.getEntryKey())) {
 					continue;
 				}
 				result.add(val);
@@ -407,51 +469,35 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		}
 	}
 
-	protected Collection<? extends DBTraceObjectValue> doGetElements() {
-		List<DBTraceObjectValue> result = new ArrayList<>();
-		for (DBTraceObjectValue val : manager.valuesByTriple
-				.sub(new PrimaryTriple(this, "[", Long.MIN_VALUE), true,
-					new PrimaryTriple(this, "\\", Long.MIN_VALUE), false)
-				.values()) {
-			result.add(val);
-		}
+	protected Collection<? extends InternalTraceObjectValue> doGetElements() {
+		List<InternalTraceObjectValue> result = new ArrayList<>();
+		collectNonRangedElements(result);
+		collectRangedElements(result);
 		return result;
 	}
 
 	@Override
-	public Collection<? extends DBTraceObjectValue> getElements() {
+	public Collection<? extends InternalTraceObjectValue> getElements() {
 		try (LockHold hold = manager.trace.lockRead()) {
 			return doGetElements();
 		}
 	}
 
-	protected Collection<? extends DBTraceObjectValue> doGetAttributes() {
-		List<DBTraceObjectValue> result = new ArrayList<>();
-		for (DBTraceObjectValue val : manager.valuesByTriple
-				.sub(new PrimaryTriple(this, "", Long.MIN_VALUE), true,
-					new PrimaryTriple(this, "[", Long.MIN_VALUE), false)
-				.values()) {
-			result.add(val);
-		}
-		for (DBTraceObjectValue val : manager.valuesByTriple
-				.tail(new PrimaryTriple(this, "\\", Long.MIN_VALUE), true)
-				.values()) {
-			if (val.getParent() != this) {
-				break;
-			}
-			result.add(val);
-		}
+	protected Collection<? extends InternalTraceObjectValue> doGetAttributes() {
+		List<InternalTraceObjectValue> result = new ArrayList<>();
+		collectNonRangedAttributes(result);
+		collectRangedAttributes(result);
 		return result;
 	}
 
 	@Override
-	public Collection<? extends DBTraceObjectValue> getAttributes() {
+	public Collection<? extends InternalTraceObjectValue> getAttributes() {
 		try (LockHold hold = manager.trace.lockRead()) {
 			return doGetAttributes();
 		}
 	}
 
-	protected void doCheckConflicts(Range<Long> span, String key, Object value) {
+	protected void doCheckConflicts(Lifespan span, String key, Object value) {
 		for (InternalTraceObjectValue val : doGetValues(span, key)) {
 			if (!Objects.equals(value, val.getValue())) {
 				throw new DuplicateKeyException(key);
@@ -460,50 +506,55 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	// TODO: Could/should this return Stream instead?
-	protected Collection<? extends InternalTraceObjectValue> doGetValues(Range<Long> span,
+	protected Collection<? extends InternalTraceObjectValue> doGetValues(Lifespan span,
 			String key) {
-		return doGetValues(DBTraceUtils.lowerEndpoint(span), DBTraceUtils.upperEndpoint(span), key);
+		return doGetValues(span.lmin(), span.lmax(), key);
 	}
 
 	protected Collection<? extends InternalTraceObjectValue> doGetValues(long lower, long upper,
 			String key) {
-		try (LockHold hold = manager.trace.lockRead()) {
-			// Collect triplet-indexed values
-			Set<InternalTraceObjectValue> result = new LinkedHashSet<>();
-			PrimaryTriple min = new PrimaryTriple(this, key, lower);
-			PrimaryTriple max = new PrimaryTriple(this, key, upper);
-			DBTraceObjectValue floor = manager.valuesByTriple.floorValue(min);
-			if (floor != null && floor.getParent() == this && key.equals(floor.getEntryKey()) &&
-				floor.getLifespan().contains(lower)) {
-				result.add(floor);
-			}
-			for (DBTraceObjectValue val : manager.valuesByTriple.sub(min, true, max, true)
+		// Collect triplet-indexed values
+		Set<InternalTraceObjectValue> result = new LinkedHashSet<>();
+		PrimaryTriple min = new PrimaryTriple(this, key, lower);
+		PrimaryTriple max = new PrimaryTriple(this, key, upper);
+		DBTraceObjectValue floor = manager.valuesByTriple.floorValue(min);
+		if (floor != null && floor.getParent() == this && key.equals(floor.getEntryKey()) &&
+			floor.getLifespan().contains(lower)) {
+			result.add(floor);
+		}
+		for (DBTraceObjectValue val : manager.valuesByTriple.sub(min, true, max, true)
+				.values()) {
+			result.add(val);
+		}
+
+		// Collect R*-Tree-indexed values
+		for (DBTraceAddressSnapRangePropertyMapSpace<DBTraceObjectAddressRangeValue, DBTraceObjectAddressRangeValue> space : manager.rangeValueMap
+				.getActiveMemorySpaces()) {
+			AddressSpace as = space.getAddressSpace();
+
+			for (DBTraceObjectAddressRangeValue val : manager.rangeValueMap
+					.reduce(TraceAddressSnapRangeQuery
+							.intersecting(as.getMinAddress(), as.getMaxAddress(), lower, upper))
 					.values()) {
+				if (val.getParent() != this) {
+					continue;
+				}
+				if (!key.equals(val.getEntryKey())) {
+					continue;
+				}
 				result.add(val);
 			}
+		}
 
-			// Collect R*-Tree-indexed values
-			for (DBTraceAddressSnapRangePropertyMapSpace<DBTraceObjectAddressRangeValue, DBTraceObjectAddressRangeValue> space : manager.rangeValueMap
-					.getActiveMemorySpaces()) {
-				AddressSpace as = space.getAddressSpace();
+		return result.stream()
+				.sorted(Comparator.comparing(v -> v.getMinSnap()))
+				.collect(Collectors.toList());
+	}
 
-				for (DBTraceObjectAddressRangeValue val : manager.rangeValueMap
-						.reduce(TraceAddressSnapRangeQuery
-								.intersecting(as.getMinAddress(), as.getMaxAddress(), lower, upper))
-						.values()) {
-					if (val.getParent() != this) {
-						continue;
-					}
-					if (!key.equals(val.getEntryKey())) {
-						continue;
-					}
-					result.add(val);
-				}
-			}
-
-			return result.stream()
-					.sorted(Comparator.comparing(v -> v.getMinSnap()))
-					.collect(Collectors.toList());
+	@Override
+	public Collection<? extends InternalTraceObjectValue> getValues(Lifespan span, String key) {
+		try (LockHold hold = manager.trace.lockRead()) {
+			return doGetValues(span, key);
 		}
 	}
 
@@ -517,11 +568,11 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		return floor;
 	}
 
-	protected Stream<DBTraceObjectValue> doGetNonRangedValues(Range<Long> span, String key,
+	protected Stream<DBTraceObjectValue> doGetOrderedNonRangedValues(Lifespan span, String key,
 			boolean forward) {
 		DBCachedObjectIndex<PrimaryTriple, DBTraceObjectValue> sub = manager.valuesByTriple.sub(
-			new PrimaryTriple(this, key, DBTraceUtils.lowerEndpoint(span)), true,
-			new PrimaryTriple(this, key, DBTraceUtils.upperEndpoint(span)), true);
+			new PrimaryTriple(this, key, span.lmin()), true,
+			new PrimaryTriple(this, key, span.lmax()), true);
 		Spliterator<DBTraceObjectValue> spliterator = (forward ? sub : sub.descending())
 				.values()
 				.spliterator();
@@ -544,29 +595,25 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		return null;
 	}
 
-	protected Stream<DBTraceObjectAddressRangeValue> doGetRangedValues(Range<Long> span,
+	protected Stream<DBTraceObjectAddressRangeValue> doGetOrderedRangedValues(Lifespan span,
 			String key, boolean forward) {
 		Rectangle2DDirection dir = forward
 				? Rectangle2DDirection.BOTTOMMOST
 				: Rectangle2DDirection.TOPMOST;
-		List<Iterator<DBTraceObjectAddressRangeValue>> iterators = manager.rangeValueMap
+		List<Stream<DBTraceObjectAddressRangeValue>> streams = manager.rangeValueMap
 				.getActiveMemorySpaces()
 				.stream()
-				.map(s -> IteratorUtils.filteredIterator(s
+				.map(s -> StreamSupport.stream(s
 						.reduce(TraceAddressSnapRangeQuery.intersecting(span, s.getAddressSpace())
 								.starting(dir))
 						.orderedValues()
-						.iterator(),
-					v -> key.equals(v.getEntryKey())))
-				.collect(Collectors.toList());
+						.spliterator(),
+					false).filter(v -> key.equals(v.getEntryKey()) && this == v.getParent()))
+				.toList();
 		Comparator<Long> order = forward ? Comparator.naturalOrder() : Comparator.reverseOrder();
 		Comparator<DBTraceObjectAddressRangeValue> comparator =
 			Comparator.comparing(v -> v.getMinSnap(), order);
-		Iterator<DBTraceObjectAddressRangeValue> merged =
-			Iterators.mergeSorted(iterators, comparator);
-		return StreamSupport
-				.stream(Spliterators.spliteratorUnknownSize(merged, Spliterator.ORDERED), false)
-				.filter(v -> key.equals(v.getEntryKey()));
+		return StreamUtils.merge(streams, comparator);
 	}
 
 	@Override
@@ -580,21 +627,18 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		}
 	}
 
-	protected Stream<InternalTraceObjectValue> doGetOrderedValues(Range<Long> span, String key,
+	protected Stream<InternalTraceObjectValue> doGetOrderedValues(Lifespan span, String key,
 			boolean forward) {
-		Stream<DBTraceObjectValue> nrVals = doGetNonRangedValues(span, key, forward);
-		Stream<DBTraceObjectAddressRangeValue> rVals = doGetRangedValues(span, key, forward);
+		Stream<DBTraceObjectValue> nrVals = doGetOrderedNonRangedValues(span, key, forward);
+		Stream<DBTraceObjectAddressRangeValue> rVals = doGetOrderedRangedValues(span, key, forward);
 		Comparator<Long> order = forward ? Comparator.naturalOrder() : Comparator.reverseOrder();
 		Comparator<InternalTraceObjectValue> comparator =
 			Comparator.comparing(v -> v.getMinSnap(), order);
-		Iterator<InternalTraceObjectValue> merged =
-			Iterators.mergeSorted(Arrays.asList(nrVals.iterator(), rVals.iterator()), comparator);
-		return StreamSupport
-				.stream(Spliterators.spliteratorUnknownSize(merged, Spliterator.ORDERED), false);
+		return StreamUtils.merge(List.of(nrVals, rVals), comparator);
 	}
 
 	@Override
-	public Stream<? extends InternalTraceObjectValue> getOrderedValues(Range<Long> span, String key,
+	public Stream<? extends InternalTraceObjectValue> getOrderedValues(Lifespan span, String key,
 			boolean forward) {
 		try (LockHold hold = manager.trace.lockRead()) {
 			return doGetOrderedValues(span, key, forward);
@@ -619,37 +663,49 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		return getValue(snap, name);
 	}
 
-	protected Stream<? extends DBTraceObjectValPath> doStreamVisitor(Range<Long> span,
+	protected Stream<? extends TraceObjectValPath> doStreamVisitor(Lifespan span,
 			Visitor visitor) {
-		return InternalTreeTraversal.INSTANCE.walkObject(visitor, this, span,
+		return TreeTraversal.INSTANCE.walkObject(visitor, this, span,
 			DBTraceObjectValPath.of());
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValPath> getAncestors(
-			Range<Long> span, PathPredicates rootPredicates) {
+	public Stream<? extends TraceObjectValPath> getAncestors(Lifespan span,
+			PathPredicates relativePredicates) {
 		try (LockHold hold = manager.trace.lockRead()) {
-			return doStreamVisitor(span, new InternalAncestorsVisitor(rootPredicates));
+			Stream<? extends TraceObjectValPath> ancestors =
+				doStreamVisitor(span, new AncestorsRelativeVisitor(relativePredicates));
+			if (relativePredicates.matches(List.of())) {
+				return Stream.concat(Stream.of(DBTraceObjectValPath.of()), ancestors);
+			}
+			return ancestors;
 		}
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValPath> getSuccessors(
-			Range<Long> span, PathPredicates relativePredicates) {
-		DBTraceObjectValPath empty = DBTraceObjectValPath.of();
+	public Stream<? extends TraceObjectValPath> getAncestorsRoot(
+			Lifespan span, PathPredicates rootPredicates) {
 		try (LockHold hold = manager.trace.lockRead()) {
-			Stream<? extends DBTraceObjectValPath> succcessors =
-				doStreamVisitor(span, new InternalSuccessorsVisitor(relativePredicates));
+			return doStreamVisitor(span, new AncestorsRootVisitor(rootPredicates));
+		}
+	}
+
+	@Override
+	public Stream<? extends TraceObjectValPath> getSuccessors(
+			Lifespan span, PathPredicates relativePredicates) {
+		try (LockHold hold = manager.trace.lockRead()) {
+			Stream<? extends TraceObjectValPath> succcessors =
+				doStreamVisitor(span, new SuccessorsRelativeVisitor(relativePredicates));
 			if (relativePredicates.matches(List.of())) {
 				// Pre-cat the empty path (not the empty stream)
-				return Stream.concat(Stream.of(empty), succcessors);
+				return Stream.concat(Stream.of(DBTraceObjectValPath.of()), succcessors);
 			}
 			return succcessors;
 		}
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValPath> getOrderedSuccessors(Range<Long> span,
+	public Stream<? extends TraceObjectValPath> getOrderedSuccessors(Lifespan span,
 			TraceObjectKeyPath relativePath, boolean forward) {
 		DBTraceObjectValPath empty = DBTraceObjectValPath.of();
 		try (LockHold hold = manager.trace.lockRead()) {
@@ -657,58 +713,31 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 				return Stream.of(empty); // Not the empty stream
 			}
 			return doStreamVisitor(span,
-				new InternalOrderedSuccessorsVisitor(relativePath, forward));
-		}
-	}
-
-	protected InternalTraceObjectValue doCreateValue(Range<Long> lifespan, String key,
-			Object value) {
-		return manager.doCreateValue(lifespan, this, key, value);
-	}
-
-	// HACK: Because breakpoint uses address,length instead of range. FIXME!
-	protected void applyBreakpointRangeHack(Range<Long> lifespan, String key, Object value,
-			ConflictResolution resolution) {
-		/**
-		 * NOTE: This should only be happening in Target/TraceBreakpointLocation, but I suppose
-		 * anything using this scheme should be hacked.
-		 */
-		Address address;
-		int length;
-		if (key == TargetBreakpointLocation.ADDRESS_ATTRIBUTE_NAME &&
-			value instanceof Address) {
-			address = (Address) value;
-			InternalTraceObjectValue lengthObj = getValue(DBTraceUtils.lowerEndpoint(lifespan),
-				TargetBreakpointLocation.LENGTH_ATTRIBUTE_NAME);
-			if (lengthObj == null || !(lengthObj.getValue() instanceof Integer)) {
-				return;
-			}
-			length = (Integer) lengthObj.getValue();
-		}
-		else if (key == TargetBreakpointLocation.LENGTH_ATTRIBUTE_NAME &&
-			value instanceof Integer) {
-			length = (Integer) value;
-			InternalTraceObjectValue addressObj = getValue(DBTraceUtils.lowerEndpoint(lifespan),
-				TargetBreakpointLocation.ADDRESS_ATTRIBUTE_NAME);
-			if (addressObj == null || !(addressObj.getValue() instanceof Address)) {
-				return;
-			}
-			address = (Address) addressObj.getValue();
-		}
-		else {
-			return;
-		}
-		try {
-			setValue(lifespan, TraceObjectBreakpointLocation.KEY_RANGE,
-				new AddressRangeImpl(address, length), resolution);
-		}
-		catch (AddressOverflowException e) {
-			Msg.warn(this, "Could not set range: " + e);
+				new OrderedSuccessorsVisitor(relativePath, forward));
 		}
 	}
 
 	@Override
-	public InternalTraceObjectValue setValue(Range<Long> lifespan, String key, Object value,
+	public Stream<? extends TraceObjectValPath> getCanonicalSuccessors(
+			PathPredicates relativePredicates) {
+		try (LockHold hold = manager.trace.lockRead()) {
+			Stream<? extends TraceObjectValPath> successors = doStreamVisitor(Lifespan.ALL,
+				new CanonicalSuccessorsRelativeVisitor(relativePredicates));
+			if (relativePredicates.matches(List.of())) {
+				// Pre-cat the empty path (not the empty stream)
+				return Stream.concat(Stream.of(DBTraceObjectValPath.of()), successors);
+			}
+			return successors;
+		}
+	}
+
+	protected InternalTraceObjectValue doCreateValue(Lifespan lifespan, String key,
+			Object value) {
+		return manager.doCreateValue(lifespan, this, key, value);
+	}
+
+	@Override
+	public InternalTraceObjectValue setValue(Lifespan lifespan, String key, Object value,
 			ConflictResolution resolution) {
 		try (LockHold hold = manager.trace.lockWrite()) {
 			if (isDeleted()) {
@@ -735,7 +764,7 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 				}
 
 				@Override
-				protected InternalTraceObjectValue put(Range<Long> range, Object value) {
+				protected InternalTraceObjectValue put(Lifespan range, Object value) {
 					InternalTraceObjectValue entry = super.put(range, value);
 					if (entry != null && entry.isCanonical()) {
 						canonicalLifeChanged = entry.getChild();
@@ -744,14 +773,12 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 				}
 
 				@Override
-				protected InternalTraceObjectValue create(Range<Long> range, Object value) {
+				protected InternalTraceObjectValue create(Lifespan range, Object value) {
 					return doCreateValue(range, key, value);
 				}
 			};
 			InternalTraceObjectValue result = setter.set(lifespan, value);
 
-			// NB. This hack will cause more value events. good.
-			applyBreakpointRangeHack(lifespan, key, value, resolution);
 			DBTraceObject child = setter.canonicalLifeChanged;
 			if (child != null) {
 				child.emitEvents(
@@ -762,12 +789,12 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public TraceObjectValue setValue(Range<Long> lifespan, String key, Object value) {
+	public TraceObjectValue setValue(Lifespan lifespan, String key, Object value) {
 		return setValue(lifespan, key, value, ConflictResolution.TRUNCATE);
 	}
 
 	@Override
-	public TraceObjectValue setAttribute(Range<Long> lifespan, String name, Object value) {
+	public TraceObjectValue setAttribute(Lifespan lifespan, String name, Object value) {
 		if (!PathUtils.isName(name)) {
 			throw new IllegalArgumentException("Attribute name must not be an index");
 		}
@@ -775,12 +802,12 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public TraceObjectValue setElement(Range<Long> lifespan, String index, Object value) {
+	public TraceObjectValue setElement(Lifespan lifespan, String index, Object value) {
 		return setValue(lifespan, PathUtils.makeKey(index), value);
 	}
 
 	@Override
-	public TraceObjectValue setElement(Range<Long> lifespan, long index, Object value) {
+	public TraceObjectValue setElement(Lifespan lifespan, long index, Object value) {
 		return setElement(lifespan, PathUtils.makeIndex(index), value);
 	}
 
@@ -790,15 +817,15 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 	}
 
 	@Override
-	public Stream<? extends DBTraceObjectValPath> queryAncestorsTargetInterface(Range<Long> span,
+	public Stream<? extends TraceObjectValPath> queryAncestorsTargetInterface(Lifespan span,
 			Class<? extends TargetObject> targetIf) {
 		// This is a sort of meet-in-the-middle. The type search must originate from the root
 		PathMatcher matcher = getManager().getRootSchema().searchFor(targetIf, false);
-		return getAncestors(span, matcher);
+		return getAncestorsRoot(span, matcher);
 	}
 
 	@Override
-	public <I extends TraceObjectInterface> Stream<I> queryAncestorsInterface(Range<Long> span,
+	public <I extends TraceObjectInterface> Stream<I> queryAncestorsInterface(Lifespan span,
 			Class<I> ifClass) {
 		return queryAncestorsTargetInterface(span, TraceObjectInterfaceUtils.toTargetIf(ifClass))
 				.map(p -> p.getSource(this).queryInterface(ifClass));
@@ -822,20 +849,32 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 				.map(o -> o.queryInterface(ifClass));
 	}
 
-	@Override
-	public Stream<? extends DBTraceObjectValPath> querySuccessorsTargetInterface(Range<Long> span,
+	// TODO: Post filter until GP-1301
+	private boolean isActuallyInterface(TraceObjectValPath path,
 			Class<? extends TargetObject> targetIf) {
-		PathMatcher matcher = getTargetSchema().searchFor(targetIf, true);
-		// TODO: Post filter until GP-1301
-		return getSuccessors(span, matcher).filter(
-			p -> p.getDestination(this).getTargetSchema().getInterfaces().contains(targetIf));
+		TraceObjectValue lastEntry = path.getLastEntry();
+		if (lastEntry == null) {
+			// TODO: This assumes the client will call getDestination(this)
+			return this.getTargetSchema().getInterfaces().contains(targetIf);
+		}
+		if (!lastEntry.isObject()) {
+			return false;
+		}
+		return lastEntry.getChild().getTargetSchema().getInterfaces().contains(targetIf);
 	}
 
 	@Override
-	public <I extends TraceObjectInterface> Stream<I> querySuccessorsInterface(Range<Long> span,
-			Class<I> ifClass) {
-		return querySuccessorsTargetInterface(span, TraceObjectInterfaceUtils.toTargetIf(ifClass))
-				.map(p -> p.getDestination(this).queryInterface(ifClass));
+	public Stream<? extends TraceObjectValPath> querySuccessorsTargetInterface(Lifespan span,
+			Class<? extends TargetObject> targetIf, boolean requireCanonical) {
+		PathMatcher matcher = getTargetSchema().searchFor(targetIf, requireCanonical);
+		return getSuccessors(span, matcher).filter(p -> isActuallyInterface(p, targetIf));
+	}
+
+	@Override
+	public <I extends TraceObjectInterface> Stream<I> querySuccessorsInterface(Lifespan span,
+			Class<I> ifClass, boolean requireCanonical) {
+		return querySuccessorsTargetInterface(span, TraceObjectInterfaceUtils.toTargetIf(ifClass),
+			requireCanonical).map(p -> p.getDestination(this).queryInterface(ifClass));
 	}
 
 	protected void doDelete() {
@@ -863,9 +902,14 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		manager.trace.setChanged(rec);
 		for (TraceObjectInterface iface : ifaces.values()) {
 			DBTraceObjectInterface dbIface = (DBTraceObjectInterface) iface;
-			TraceChangeRecord<?, ?> evt = dbIface.translateEvent(rec);
-			if (evt != null) {
-				manager.trace.setChanged(evt);
+			try {
+				TraceChangeRecord<?, ?> evt = dbIface.translateEvent(rec);
+				if (evt != null) {
+					manager.trace.setChanged(evt);
+				}
+			}
+			catch (Throwable t) {
+				Msg.error(this, "Error while translating event " + rec + " for interface " + iface);
 			}
 		}
 	}
